Fix overflow css of the Sidebar
Fix overflow css of the Sidebar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,17 +11,15 @@
 		@apply icon cursor-pointer hover:scale-125;
 	}
 }
-
 @layer utilities {
-	.scrollbar-hidden {
-		/* Hide scrollbar for Chrome, Safari and Opera */
-		::-webkit-scrollbar {
-			display: none;
-		}
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .overflow-y-scroll::-webkit-scrollbar {
+    display: none;
+  }
 
-		/* Hide scrollbar for IE, Edge and Firefox */
-
-		-ms-overflow-style: none; /* IE and Edge */
-		scrollbar-width: none; /* Firefox */
-	}
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .overflow-y-scroll {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
